Enhance email service configuration and functionality
- Added EMAIL_ENABLED configuration to control email service activation.
- Updated EmailService to check if the service is enabled and operational before sending emails.
- Improved error handling in email sending methods, returning status and reason for failures.
- Adjusted EmailProcessor to log messages based on email service status.

These changes provide better control over email functionality and improve logging for email operations.

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ LOG_BATCH_TIMEOUT=5000            # Timeout del batch (ms)
 LOG_RETENTION_DAYS=30            # Días de retención
 
 # SMTP Configuration
+EMAIL_ENABLED=false
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
